# Terminatex

./: README.md  example.py  pyproject.toml
terminatex/: __init__.py  core.py
